fixed z-index

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -24,7 +24,7 @@
 
   &__inner {
     position: relative;
-    z-index: 7;
+    z-index: 1;
     max-width: 466px;
   }
 
